Fix blog overflow issue

--- a/_scss/_main.scss
+++ b/_scss/_main.scss
@@ -406,6 +406,18 @@
   }
 }
 
+.blog {
+  padding: 50px 0 0;
+
+  .title {
+    margin-bottom: 10px;
+  }
+
+  .slick-track {
+    padding: 65px 0;
+  }
+}
+
 .blog-card {
   width: 25%;
   height: 450px;
@@ -471,7 +483,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    padding: 20px;
+    padding: 30px 20px;
     color: $white;
     opacity: 0;
     transition: all ease-in-out .3s;
@@ -480,7 +492,7 @@
       font-family: $mont;
       font-weight: 600;
       text-transform: uppercase;
-      font-size: 28px;
+      font-size: 24px;
       margin-top: 10px;
     }
 
